# HelloWorld

./: CLAUDE.md  README_TEST.md  hashcash.py
.claude/: CLAUDE.md
.claude/agents/: beck-coder.md  beck-tester.md  jobs-planner.md  jobs-reviewer.md  martin-reviewer.md  rams-designer.md  rams-planner.md  rams-reviewer.md  torvalds-coder.md  torvalds-planner.md  torvalds-reviewer.md
.claude/skills/conductor/: SKILL.md
.claude/skills/conductor/examples/: sample-flow.md
.claude/skills/conductor/phase-templates/: acceptance.md  discussion.md  execution.md  planning.md  quality-gate.md  triage.md
conductor/: pyproject.toml
conductor/personas/: beck.md  jobs.md  martin.md  rams.md  torvalds.md
conductor/src/conductor/: __init__.py  actor.py  main.py  orchestrator.py  persona.py  prompt_builder.py  state.py  tmux_manager.py
docs/claude-code-from-zero-to-hero/: 01-output-format-深入理解输出格式.md
