[project]
name = "conductor"
version = "0.1.0"
description = "Conductor: Multi-Actor orchestration engine powered by Claude Agent SDK"
readme = { text = "", content-type = "text/markdown" }
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "pydantic>=2.0",
]

[project.scripts]
conductor = "conductor.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
